--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -1,11 +1,21 @@
-.container
+.navbar-container
 {
     display: flex;
-    color: white;
-    text-decoration: none;
-    justify-content: space-between;
     padding: 16px;
+    width: 100%;
+    height: 512px;
+    color: white;
+    justify-content: space-between;
     background-color: transparent;
+}
+
+nav
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 64px;
 }
 
 .logo
@@ -15,15 +25,18 @@
     cursor: pointer;
 }
 
-.navmenu
+nav .nav-menu
 {
     display: flex;
-    justify-content: space-between;
 }
 
-.navmenu li
+.nav-menu li
 {
-    font-size: 14px;
-    display: inline-block;
-    margin: 0px 16px;
+    padding: 0px 16px;
+}
+
+.nav-menu li:hover
+{
+    cursor: pointer;
+    color: aqua;
 }
